---------------------------------------------------------------------------
Version 3.21.2  [DEVEL] (rgerhards), 2008-08-??
- added $InputUnixListenSocketHostName config directive, which permits to
  override the hostname being used on a local unix socket. This is useful
  for differentiating "hosts" running in several jails. Feature was
  suggested by David Darville, thanks for the suggestion.
---------------------------------------------------------------------------
Version 3.21.1  [DEVEL] (rgerhards), 2008-07-30
- bugfix: no error was reported if the target of a $IncludeConfig
  could not be accessed.
- added testbed for common config errors
- added doc for -u option to rsyslogd man page
- enhanced config file checking - no active actions are detected
- added -N rsyslogd command line option for a config validation run
  (which does not execute actual syslogd code and does not interfere
  with a running instance)
- somewhat improved emergency configuration. It is now also selected
  if the config contains no active actions
- rsyslogd error messages are now reported to stderr by default. can be
  turned off by the new "$ErrorMessagesToStderr off" directive
 Thanks to HKS for suggesting the new features.
---------------------------------------------------------------------------
Version 3.21.0  [DEVEL] (rgerhards), 2008-07-18
- starts a new devel branch
- added a generic test driver for RainerScript plus some test cases
  to the testbench
- added a small diagnostic tool to obtain result of gethostname() API
- imported all changes from 3.18.1 until today (some quite important,
  see below)
---------------------------------------------------------------------------
Version 3.19.11 [BETA] (rgerhards), 2008-??-??
---------------------------------------------------------------------------
Version 3.19.10 [BETA] (rgerhards), 2008-07-15
- start of a new beta branch based on former 3.19 devel branch
- bugfix: bad memory leak in disk-based queue modes